@startuml
'https://plantuml.com/class-diagram

class Company
class WaitingRoom
class RecoveryRoom
class CenterCoordinator
abstract VaccinationCenter

'class components

abstract VaccinationCenter {
-name
-address
-phone number
-e-mail address
-fax number
-website address
-opening hours
-closing hours
-slot duration
-maximum number of vaccines
-coordinator
}

class WaitingRoom {
+removeFromWaitingRoom()
}

class RecoveryRoom {
+addToRecoveryRoom()
}



'class relation
Company "1" -- "1..*" VaccinationCenter : has >

CenterCoordinator "1" -- "1" VaccinationCenter : responsible for >

VaccinationCenter "1..*" -- "1..*" WaitingRoom : has >
VaccinationCenter "1..*" -- "1..*" RecoveryRoom : has >


@enduml